# cozy-salt

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .salt-lint  .yamllint.yml  AUTHORS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_SUMMARY.md  DOCUMENTATION_CATALOG.txt  DOCUMENTATION_ORGANIZATION_ANALYSIS.md  Dockerfile  Dockerfile.linux-master  Dockerfile.linux-minion  Dockerfile.master  Dockerfile.rhel-minion  Dockerfile.ubuntu-minion  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  WINDOWS-ENROLLMENT.md  docker-compose-net.yml  docker-compose-test.yaml  docker-compose.yaml  environment.yml  pyproject.toml
.claude/: OMNISEARCH_SETUP.md  settings.json
.claude/hooks/: MEMORY-TRACKING.md  OMNISEARCH_INTEGRATION.md  README-HOOKS.md  README.md  demo-omnisearch.sh  memory-tracking.sh  omnisearch-integration.sh  process-memory-queue.sh  (+7 more)
docs/: ARCHITECTURE.md  PERMISSIONS.md  README.md  default-cmd-env-variables.md  deployment-model.md  egirl-ops-makefile-naming-review.md  egirl-ops-test-infrastructure-review.md  package-management.md  package-metadata-validation.md
pkgs/: packages.sls
provisioning/: install.sls  packages-p2-draft.sls  packages.sls
scripts/: README.md  entrypoint-master.sh  fix-permissions.sh  generate-windows-keys.ps1  generate-windows-keys.sh
tests/: .gitignore  .gitkeep  Dockerfile.linux-minion  README.md  __init__.py  conftest.py  entrypoint-test-minion.sh  parse-state-results.py  test-psscripts.ps1  test-shellscripts.sh  test-states-json.sh  test_linting.py  test_states.py  validate_packages.py
(+388 files in other folders)
